모바일 환경에서 footer 의  toggle-title 이 Z-index가 이상한 현상을 FIX

--- a/src/components/styles/Footer.scss
+++ b/src/components/styles/Footer.scss
@@ -160,7 +160,7 @@ footer {
                 cursor: pointer;
                 user-select: none; 
                 position: relative;
-                z-index: 10; 
+                z-index: 2; 
                 
                 .toggle-icon {
                     display: block;
